Added Register servlet

--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -86,7 +86,8 @@
 			<div class="title-box">
 				<span>Register</span>				
 			</div>
-			<form action="inc/sendemail.php" id="appointment-page-form" class="contact-form row">
+			
+			<form action="register" id="appointment-page-form" method="POST">
 				<div class="col-md-7">
 					<div class="row">
 						<div class="col-md-6">
