--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -80,9 +80,7 @@
 	
 	<section class="sec-padding contact-content appointment-content">
 		<div class="container">
-			<div class="title-box">
-				<span>Register</span>				
-			</div>
+			<p><h2>Register</h2></p>				
 			
 			<form id="register-form" class="contact-form row" action="RegisterServlet" method="POST">
 				<div class="col-md-7">
@@ -91,12 +89,67 @@
 							<input type="text" name="fullname" placeholder="Full Name" required>
                             <input type="password" name="password" placeholder="Password" required>
                             <input type="text" name="company" placeholder="Company Name" required>
-                            <input type="text" name="address" placeholder="Address" required>
+                            <input type="text" name="address" placeholder="Address" required>                            
+                            <select class="select-input" name="state" id="state" required>
+  								<option value="" selected="selected">State</option>
+  								<option value="AL">Alabama</option>
+  								<option value="AK">Alaska</option>
+  								<option value="AZ">Arizona</option>
+  								<option value="AR">Arkansas</option>
+  								<option value="CA">California</option>
+  								<option value="CO">Colorado</option>
+  								<option value="CT">Connecticut</option>
+  								<option value="DE">Delaware</option>
+  								<option value="DC">District Of Columbia</option>
+  								<option value="FL">Florida</option>
+  								<option value="GA">Georgia</option>
+  								<option value="HI">Hawaii</option>
+  								<option value="ID">Idaho</option>
+  								<option value="IL">Illinois</option>
+  								<option value="IN">Indiana</option>
+  								<option value="IA">Iowa</option>
+  								<option value="KS">Kansas</option>
+  								<option value="KY">Kentucky</option>
+  								<option value="LA">Louisiana</option>
+  								<option value="ME">Maine</option>
+  								<option value="MD">Maryland</option>
+  								<option value="MA">Massachusetts</option>
+  								<option value="MI">Michigan</option>
+  								<option value="MN">Minnesota</option>
+  								<option value="MS">Mississippi</option>
+  								<option value="MO">Missouri</option>
+  								<option value="MT">Montana</option>
+  								<option value="NE">Nebraska</option>
+  								<option value="NV">Nevada</option>
+  								<option value="NH">New Hampshire</option>
+  								<option value="NJ">New Jersey</option>
+  								<option value="NM">New Mexico</option>
+  								<option value="NY">New York</option>
+  								<option value="NC">North Carolina</option>
+  								<option value="ND">North Dakota</option>
+  								<option value="OH">Ohio</option>
+  								<option value="OK">Oklahoma</option>
+  								<option value="OR">Oregon</option>
+  								<option value="PA">Pennsylvania</option>
+  								<option value="RI">Rhode Island</option>
+  								<option value="SC">South Carolina</option>
+  								<option value="SD">South Dakota</option>
+  								<option value="TN">Tennessee</option>
+  								<option value="TX">Texas</option>
+  								<option value="UT">Utah</option>
+  								<option value="VT">Vermont</option>
+  								<option value="VA">Virginia</option>
+  								<option value="WA">Washington</option>
+  								<option value="WV">West Virginia</option>
+  								<option value="WI">Wisconsin</option>
+  								<option value="WY">Wyoming</option>
+							</select>
+                            
                             <div class="select-input-wrapper">
 								<select class="select-input" name="organization">
 									<option value="" selected="selected">Select your organization</option>
-                                    <option value="PharmaSupplier" >Pharma Supplier</option>
-									<option value="PharmaClient">Pharma Client</option>									
+                                    <option value="Pharma Supplier" >Pharma Supplier</option>
+									<option value="Pharma Client">Pharma Client</option>									
 								</select>
 							</div>							
 						</div>
@@ -104,13 +157,14 @@
 						<div class="col-md-6">
 							<input type="email" name="email" placeholder="Email" required>
 							<input type="password" name="repassword" placeholder="Retype Password" required>
-                            <input type="text" name="title" placeholder="Title" required>
-                            <input type="text" name="phone" placeholder="Phone" required>
+                            <input type="tel" name="phone" placeholder="Phone" required>
+                            <input type="text" name="city" placeholder="City" required>
+                            <input type="number" name="zip" placeholder="Zipcode" required>
 							<div class="select-input-wrapper">
 								<select class="select-input" name="role">
 									<option value="" selected="selected">Select your role</option>
-                                    <option value="PatientServicesLead" >Patient Services Lead</option>
-									<option value="MarketAccessLead">Market Access Lead</option>									
+                                    <option value="Patient Services Lead" >Patient Services Lead</option>
+									<option value="Market Access Lead">Market Access Lead</option>									
 								</select>
 							</div>							
 						</div>						
@@ -118,7 +172,9 @@
 				</div>
 				
 				<div class="col-md-12"><button type="submit">Register</button></div>
-			
+				<!-- 
+				<div class="col-md-12"><button type="reset">Reset</button></div>
+				 -->
 			</form>
 		</div>
 	</section>
