--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -61,7 +61,7 @@
 								<li><a href="service-details.html">single tabbed version</a></li>
 							</ul>
                                             </li>
-                                            <li><a href="register.html">Register</a></li>	
+                                            <li><a href="register.jsp">Register</a></li>	
                                             <li><a href="blog.html">Blog</a></li>	
                                             <li><a href="faq.html">FAQ</a></li>                                                                                                                   
 					</ul>
