--- a/src/main/webapp/blog.html
+++ b/src/main/webapp/blog.html
@@ -62,7 +62,7 @@
 								<li><a href="service-details.html">single tabbed version</a></li>
 							</ul>
                                             </li>
-                                            <li><a href="register.html">Register</a></li>	
+                                            <li><a href="register.jsp">Register</a></li>	
                                             <li><a href="faq.html">FAQ</a></li>                                                                                                                           
 					</ul>
 				</div>
