--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -58,7 +58,7 @@
 								<li><a href="service-details.html">single tabbed version</a></li>
 							</ul>
                                             </li>
-                                            <li><a href="register.html">Register</a></li>	
+                                            <li><a href="register.jsp">Register</a></li>	
                                             <li><a href="blog.html">Blog</a></li>	
                                             <li><a href="faq.html">FAQ</a></li>                                                                                                                    
 					</ul>
@@ -186,7 +186,7 @@
 			<div class="row">
 				<div class="col-lg-6 col-md-4">
 					<h2>Launched in <b>2018</b> <br>we are bringing together suppliers and customers<br></h2>
-					<a href="register.html" class="thm-btn inverse">Join us</a>
+					<a href="register.jsp" class="thm-btn inverse">Join us</a>
 				</div>
 				<div class="col-lg-6 col-md-8">
 					<div class="single-fact">
