Created index.jsp, Login and Logout servlets with session tracking

--- a/src/main/webapp/RegistrationSuccess.html
+++ b/src/main/webapp/RegistrationSuccess.html
@@ -20,7 +20,7 @@
             <div class="container">
 		<div class="left-text pull-left">
                     <p>
-                      <a href="index.html">
+                      <a href="index.jsp">
                         <img src="img/resources/logo.png" alt="Wonne Logo"/>
                     </a>
                     </p>
