--- a/src/main/webapp/AWSIndex.html
+++ b/src/main/webapp/AWSIndex.html
@@ -19,10 +19,10 @@
       <h4>Contents of this Project</h4>
 
       <p>
-      This page is rendered from <b>WebContent/index.html</b> - a simple static
+      This page is rendered from <b>WebContent/index.jsp</b> - a simple static
       HTML page. Any static content in the WebContent folder will be accessible
       from the equivalent path in your web application (for example,
-      https://your-app-93s2kypa5y.elasticbeanstalk.com/index.html).
+      https://your-app-93s2kypa5y.elasticbeanstalk.com/index.jsp).
       </p>
 
       <p>
