--- a/src/main/webapp/appointment.html
+++ b/src/main/webapp/appointment.html
@@ -40,7 +40,7 @@
 	<header class="header">
 		<div class="container">
 			<div class="logo pull-left">
-				<a href="index.html">
+				<a href="index.jsp">
 					<img src="img/resources/logo.png" alt="Awesome Image"/>
 				</a>
 			</div>
@@ -83,7 +83,7 @@
 						<li class="dropdown">
 							<a href="#">Home</a>
 							<ul class="submenu">
-								<li><a href="index.html">Home One</a></li>
+								<li><a href="index.jsp">Home One</a></li>
 								<li><a href="index2.html">Home Two</a></li>
 							</ul>
 						</li>
@@ -143,7 +143,7 @@
 				<div class="col-md-12 sec-title colored text-center">
 					<h2>Appointment</h2>
 					<ul class="breadcumb">
-						<li><a href="index.html">Home</a></li>
+						<li><a href="index.jsp">Home</a></li>
 						<li><i class="fa fa-angle-right"></i></li>
 						<li><span>Appointment</span></li>
 					</ul>
