--- a/src/main/webapp/markets.html
+++ b/src/main/webapp/markets.html
@@ -23,7 +23,7 @@
             <div class="container">
 		<div class="left-text pull-left">
                     <p>
-                      <a href="index.html">
+                      <a href="index.jsp">
                         <img src="img/resources/logo.png" alt="Wonne Logo"/>
                     </a>
                     </p>
@@ -45,7 +45,7 @@
 			<div class="navigation pull-left">
 				<div class="nav-header">
 					<ul>
-                                            <li><a href="index.html">Home</a></li>
+                                            <li><a href="index.jsp">Home</a></li>
                                             <li><a href="about.html">About Us</a></li>			
                                             <li><a href="foundation.html">Wonne Foundation</a></li>
                                             <li class="dropdown">
