Updated registration, login and logout page.

--- a/src/main/webapp/appointment.html
+++ b/src/main/webapp/appointment.html
@@ -91,14 +91,7 @@
 						<li class="dropdown">
 							<a href="services.html">Services</a>
 							<ul class="submenu">
-								<li><a href="health-care.html">Primary Halth Care</a></li>
-								<li><a href="heart-treatment.html">Heart Treatment</a></li>
-								<li><a href="neuro.html">Neurology Treatment</a></li>
-								<li><a href="eye.html">Eye Treatment</a></li>
-								<li><a href="kidney.html">Kidney Treatment</a></li>
-								<li><a href="bone.html">Bone Treatment</a></li>
-								<li><a href="dental.html">Dental Treatment</a></li>
-								<li><a href="service-details.html">single tabbed version</a></li>
+								<li><a href="service-details.html">Demo</a></li>								
 							</ul>
 						</li>
 						<li class="dropdown">
