--- a/src/main/webapp/foundation.html
+++ b/src/main/webapp/foundation.html
@@ -49,19 +49,12 @@
                                             <li><a href="about.html">About Us</a></li>
                                             <li><a href="markets.html">Wonne Markets</a></li>
                                             <li class="dropdown">
-							<a href="services.html">Products</a>
+							<a href="#">Products</a>
 							<ul class="submenu">
-								<li><a href="health-care.html">Primary Halth Care</a></li>
-								<li><a href="heart-treatment.html">Heart Treatment</a></li>
-								<li><a href="neuro.html">Neurology Treatment</a></li>
-								<li><a href="eye.html">Eye Treatment</a></li>
-								<li><a href="kidney.html">Kidney Treatment</a></li>
-								<li><a href="bone.html">Bone Treatment</a></li>
-								<li><a href="dental.html">Dental Treatment</a></li>
-								<li><a href="service-details.html">single tabbed version</a></li>
+								<li><a href="service-details.html">Demo</a></li>								
 							</ul>
                                             </li>
-                                            <li><a href="register.html">Register</a></li>	
+                                            <li><a href="register.jsp">Register</a></li>	
                                             <li><a href="blog.html">Blog</a></li>	
                                             <li><a href="faq.html">FAQ</a></li>                                                                                                               
 					</ul>
@@ -86,7 +79,7 @@
 			<div class="row">
 				<div class="col-lg-6 col-md-4">
 					<h2>Launched in <b>2018</b> <br>we are bringing together suppliers and customers<br></h2>
-					<a href="register.html" class="thm-btn inverse">Join us</a>
+					<a href="register.jsp" class="thm-btn inverse">Join us</a>
 				</div>
 				<div class="col-lg-6 col-md-8">
 					<div class="single-fact">
