--- a/src/main/webapp/service-details.html
+++ b/src/main/webapp/service-details.html
@@ -19,108 +19,38 @@
 
 
 	<section class="top-bar">
-		<div class="container">
 
-			<div class="left-text pull-left">
-				<p><span>Opening Hours :</span> Monday to Saturday - 8am to 5pm</p>
-			</div> <!-- /.left-text -->
-
-			<div class="social-icons pull-right">
-				<ul>
-					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-					<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-					<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-				</ul>
-			</div> <!-- /.social-icons -->
-		</div>
+            <div class="container">
+		<div class="left-text pull-left">
+                    <p>
+                      <a href="index.jsp">
+                        <img src="img/resources/logo.png" alt="Wonne Logo"/>
+                    </a>
+                    </p>
+		</div> <!-- /.left-text -->
+		<div class="social-icons pull-right">
+                    <ul>
+                        <li><a href="http://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="http://www.twitter.com"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="http://www.linkedin.com"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="http://www.youtube.com"><i class="fa fa-youtube"></i></a></li>
+                    </ul>
+                </div> <!-- /.social-icons -->
+            </div>
 	</section> <!-- /.top-bar -->
-
-	<header class="header">
-		<div class="container">
-			<div class="logo pull-left">
-				<a href="index.jsp">
-					<img src="img/resources/logo.png" alt="Awesome Image"/>
-				</a>
-			</div>
-			<div class="header-right-info pull-right clearfix">
-				<div class="single-header-info">
-					<div class="icon-box">
-						<div class="inner-box">
-							<i class="flaticon-interface"></i>
-						</div>
-					</div>
-					<div class="content">
-						<h3>EMAIL</h3>
-						<p>companyname@mail.com</p>
-					</div>
-				</div>
-				<div class="single-header-info">
-					<div class="icon-box">
-						<div class="inner-box">
-							<i class="flaticon-telephone"></i>
-						</div>
-					</div>
-					<div class="content">
-						<h3>Call Now</h3>
-						<p><b>(732) 803-010-03</b></p>
-					</div>
-				</div>
-				<div class="single-header-info">
-					<a href="appointment.html" class="thm-btn">Appointment</a>
-				</div>
-			</div>
-		</div>
-	</header> <!-- /.header -->
-
 
 	<nav class="mainmenu-area stricky">
 		<div class="container">
 			<div class="navigation pull-left">
 				<div class="nav-header">
 					<ul>
-						<li class="dropdown">
-							<a href="#">Home</a>
-							<ul class="submenu">
-								<li><a href="index.jsp">Home One</a></li>
-								<li><a href="index2.html">Home Two</a></li>
-							</ul>
-						</li>
-						<li><a href="about.html">About</a></li>						
-						<li class="dropdown">
-							<a href="services.html">Services</a>
-							<ul class="submenu">
-								<li><a href="health-care.html">Primary Halth Care</a></li>
-								<li><a href="heart-treatment.html">Heart Treatment</a></li>
-								<li><a href="neuro.html">Neurology Treatment</a></li>
-								<li><a href="eye.html">Eye Treatment</a></li>
-								<li><a href="kidney.html">Kidney Treatment</a></li>
-								<li><a href="bone.html">Bone Treatment</a></li>
-								<li><a href="dental.html">Dental Treatment</a></li>
-								<li><a href="service-details.html">single tabbed version</a></li>
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a href="doctors.html">Doctors</a>
-							<ul class="submenu">
-								<li><a href="doctor-profile.html">Doctors Profile</a></li>
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a href="#">Pages</a>
-							<ul class="submenu">
-								<li><a href="appointment.html">Appointment</a></li>
-								<li><a href="faq.html">FAQ</a></li>
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a href="blog.html">Blog</a>
-							<ul class="submenu">
-								<li><a href="blog-details.html">Blog Details</a></li>
-							</ul>
-						</li>
-						<li><a href="contact.html">Contact Us</a></li>
+						<li><a href="index.jsp">Home</a></li>
+                    	<li><a href="about.html">About Us</a></li>			
+                        <li><a href="foundation.html">Wonne Foundation</a></li>
+                        <li><a href="markets.html">Wonne Markets</a></li>
+                        <li><a href="register.jsp">Register</a></li>	
+                        <li><a href="blog.html">Blog</a></li>	
+                        <li><a href="faq.html">FAQ</a></li>                                                                                                                    
 					</ul>
 				</div>
 				<div class="nav-footer">
@@ -135,6 +65,7 @@
 			</div>
 		</div>
 	</nav> <!-- /.mainmenu-area -->
+	
 
 
 	<section class="inner-header">
