--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -49,16 +49,9 @@
                                             <li><a href="foundation.html">Wonne Foundation</a></li>
                                             <li><a href="markets.html">Wonne Markets</a></li>
                                             <li class="dropdown">
-							<a href="services.html">Products</a>
+							<a href="#">Products</a>
 							<ul class="submenu">
-								<li><a href="health-care.html">Primary Halth Care</a></li>
-								<li><a href="heart-treatment.html">Heart Treatment</a></li>
-								<li><a href="neuro.html">Neurology Treatment</a></li>
-								<li><a href="eye.html">Eye Treatment</a></li>
-								<li><a href="kidney.html">Kidney Treatment</a></li>
-								<li><a href="bone.html">Bone Treatment</a></li>
-								<li><a href="dental.html">Dental Treatment</a></li>
-								<li><a href="service-details.html">single tabbed version</a></li>
+								<li><a href="service-details.html">Demo</a></li>
 							</ul>
                                             </li>
                                             <li><a href="register.jsp">Register</a></li>	
