--- a/src/main/webapp/markets.html
+++ b/src/main/webapp/markets.html
@@ -49,19 +49,12 @@
                                             <li><a href="about.html">About Us</a></li>			
                                             <li><a href="foundation.html">Wonne Foundation</a></li>
                                             <li class="dropdown">
-							<a href="services.html">Products</a>
+							<a href="#">Products</a>
 							<ul class="submenu">
-								<li><a href="health-care.html">Primary Halth Care</a></li>
-								<li><a href="heart-treatment.html">Heart Treatment</a></li>
-								<li><a href="neuro.html">Neurology Treatment</a></li>
-								<li><a href="eye.html">Eye Treatment</a></li>
-								<li><a href="kidney.html">Kidney Treatment</a></li>
-								<li><a href="bone.html">Bone Treatment</a></li>
-								<li><a href="dental.html">Dental Treatment</a></li>
-								<li><a href="service-details.html">single tabbed version</a></li>
+								<li><a href="service-details.html">Demo</a></li>								
 							</ul>
                                             </li>
-                                            <li><a href="register.html">Register</a></li>	
+                                            <li><a href="register.jsp">Register</a></li>	
                                             <li><a href="blog.html">Blog</a></li>	
                                             <li><a href="faq.html">FAQ</a></li>         
 					</ul>
